--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -122,7 +122,7 @@ li#login_sm {
 
 .item_box .box_title {
   margin-bottom: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-style: italic;
   font-weight: bold;
   color: #00f;
@@ -153,6 +153,43 @@ li#login_sm {
   font-size: 1rem;
 }
 
+@media only screen and (max-width: 1100px) and (min-width: 1001px), only screen and (max-width: 700px) and (min-width: 481px) {
+  .item_box {
+    height: 400px;
+  }
+  .item_box .box_title {
+    font-size: 0.9rem;
+  }
+  .item_box .box_type,
+  .item_box .box_topics,
+  .item_box .box_authors {
+    font-size: 0.7rem;
+  }
+  .item_box .box_description {
+    font-size: 0.9rem;
+  }
+}
+
+@media only screen and (max-width: 1100px) and (min-width: 1001px) and (max-width: 600px), only screen and (max-width: 700px) and (min-width: 481px) and (max-width: 600px) {
+  .item_box .box_icon {
+    display: none;
+  }
+  .item_box .box_description {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 1100px) and (min-width: 1001px) and (max-width: 550px), only screen and (max-width: 700px) and (min-width: 481px) and (max-width: 550px) {
+  .item_box {
+    height: 380px;
+  }
+  .item_box .box_type,
+  .item_box .box_topics,
+  .item_box .box_authors {
+    font-size: 0.63rem;
+  }
+}
+
 #item_list_content {
   width: 100%;
   padding: 1rem 1.5rem;
@@ -168,6 +205,7 @@ li#login_sm {
 
 #item_list_content .item_list td {
   padding: 0.5rem;
+  font-size: 0.7rem;
   background-color: #99f;
 }
 
@@ -197,5 +235,30 @@ li#login_sm {
 #item_list_content .list_id {
   width: 5%;
   border-radius: 0 1rem 1rem 0;
+}
+
+@media only screen and (max-width: 1000px) {
+  #item_list_content .list_id {
+    max-width: 50px;
+    overflow-x: scroll;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  #item_list_content th {
+    font-size: 0.7rem;
+  }
+  #item_list_content .item_list td {
+    font-size: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 900px) and (max-width: 800px) {
+  #item_list_content th {
+    font-size: 0.5rem;
+  }
+  #item_list_content .item_list td {
+    font-size: 0.375rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
