--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -254,11 +254,75 @@ li#login_sm {
 }
 
 @media only screen and (max-width: 900px) and (max-width: 800px) {
-  #item_list_content th {
-    font-size: 0.5rem;
+  .list_description,
+  .list_published_date,
+  .list_id,
+  .low-responsive {
+    display: none;
   }
-  #item_list_content .item_list td {
-    font-size: 0.375rem;
+  .list_authors {
+    border-radius: 0 1rem 1rem 0;
   }
+}
+
+.detail_wrapper {
+  width: 100%;
+  padding: 1rem 1.5rem;
+  border-radius: 10px;
+  background-color: #00b;
+  color: #fff;
+}
+
+.detail_title {
+  width: 70%;
+  display: inline-block;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.detail_id {
+  width: 30%;
+  display: inline-block;
+  font-weight: bold;
+  text-align: right;
+}
+
+.detail_topics {
+  display: inline-block;
+  font-style: italic;
+}
+
+.detail_type {
+  font-style: italic;
+  float: right;
+}
+
+.detail_img {
+  width: 100%;
+  margin: 1rem auto;
+  border: 1px solid #111;
+  border-radius: 1rem;
+}
+
+.description_wrapper {
+  background-color: #99f;
+  border-radius: 1rem;
+  padding: 1rem;
+  color: #000;
+}
+
+.detail_description {
+  text-align: justify;
+  display: block;
+}
+
+.description_footer {
+  margin-top: 1rem;
+  text-align: right;
+}
+
+.detail_published_date,
+.detail_authors {
+  font-style: italic;
 }
 /*# sourceMappingURL=main.css.map */
