--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -115,7 +115,7 @@
   // Display corrector
   /////////////////////////////////////////////////////////////////////////////////////////////////////////// 
   
-    li#display_list,  // not default option
+    li#display_table,  // not default option
     li#create,        // only for logged user
 
     li#search_sm,
