--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -134,12 +134,15 @@
       li#search_sm,
       li#filter_sm,
       li#display_sm,
+      li#create_sm,       // only for logged user
       li#login_sm {
         display:          inline-block;
       }
 
       li#search,
       li#filter,
+      li#display,
+      li#create,
       li#login {
         display:          none;
       }
@@ -322,10 +325,10 @@
       .item_list td {
         font-size:        $font_size_xs;
       }
+    }
   }
 
   @media only screen and (max-width: 800px) {
-
     .list_description,
     .list_published_date,
     .list_id,
@@ -336,9 +339,8 @@
     .list_authors {
       border-radius:    0 $font_spacing_xs $font_spacing_xs 0;
     }
-
   }
-}
+
 
 
 
@@ -407,3 +409,45 @@
       font-style:         italic;
       }
 
+
+  ///////////////////////////////////////////////
+  // media query
+  ///////////////////////////////////////////////
+
+  @media only screen and (max-width: 850px) {
+    .detail_title {
+      font-size:        $font_size_md * 1.2;
+    }
+
+    .detail_id,
+    .detail_topics,
+    .detail_type {
+      font-size:        $font_size_sm * 1.3;
+    }
+  }
+
+  @media only screen and (max-width: 700px) {
+    .detail_title,
+    .detail_id,
+    .detail_topics,
+    .detail_type {
+      width:            100%;
+      margin-bottom:    $font_spacing_xs / 5;
+      display:          block;
+      text-align:       left;
+    }
+
+    .detail_title {
+      font-size:        $font_size_lg;
+    }
+
+    .detail_id {
+      margin-bottom:    $font_spacing_xs;
+    }
+  }
+
+  @media only screen and (max-width: 550px) {
+    .detail_title {
+      font-size:        $font_size_md;
+    }
+  }
