--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -115,9 +115,24 @@
   // Display corrector
   /////////////////////////////////////////////////////////////////////////////////////////////////////////// 
   
+  li#search {
+    padding:                0;
+
+    #searchInput {
+      width:                  200px;
+      padding:                $font_spacing_xs /3;
+      border:                 solid 3px $c_main;
+      border-radius:          $border_contentBox;
+      background-color:       $c_light;
+    }
+
+    #searchInput:focus {
+      outline:                none;
+    }
+  }
+
     // li#create,        // only for logged user
 
-    li#search_sm,
     li#filter_sm,
     li#display_sm,
     li#create_sm,
@@ -131,7 +146,6 @@
     ///////////////////////////////////////////////
 
     @media only screen and (max-width: 600px) {
-      li#search_sm,
       li#filter_sm,
       li#display_sm,
       li#create_sm,       // only for logged user
@@ -139,7 +153,6 @@
         display:          inline-block;
       }
 
-      li#search,
       li#filter,
       li#display,
       li#create,
