--- a/src/theme/create.css
+++ b/src/theme/create.css
@@ -11,9 +11,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 .createDiagram input {
-    margin: 20px;
+    margin: 15px;
     width: 30vw;
     height: 5vh;
 }
