--- a/src/theme/create.css
+++ b/src/theme/create.css
@@ -1,7 +1,7 @@
 .createDiagram {
     width: 80vw;
     height: 80vh;
-    position: absolute;
+    position: fixed;
     top: 10vh;
     left: 10vw;
     background-color: black;
