--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -111,13 +111,11 @@ li#login_sm {
 }
 
 @media only screen and (max-width: 600px) {
-  li#filter_sm,
   li#display_sm,
   li#create_sm,
   li#login_sm {
     display: inline-block;
   }
-  li#filter,
   li#display,
   li#create,
   li#login {
@@ -277,8 +275,36 @@ li#login_sm {
   }
 }
 
+.background_corrector {
+  width: 95%;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  margin: 0 2.5%;
+  background-color: #111;
+}
+
+.background_corrector button {
+  width: 100px;
+  margin-left: 1.5rem;
+  margin-bottom: 0.5rem;
+  padding: 0.4rem;
+  border-radius: 10px;
+  display: block;
+  font-weight: bold;
+  text-align: center;
+}
+
+.background_corrector button:hover {
+  background-color: #00f;
+  color: #fff;
+}
+
 .detail_wrapper {
-  width: 100%;
+  width: 70vw;
+  height: 80vh;
+  position: fixed;
+  overflow-y: scroll;
   padding: 1rem 1.5rem;
   border-radius: 10px;
   background-color: #00b;
