--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -163,6 +163,21 @@ li#login_sm {
   font-size: 1rem;
 }
 
+.item_box button {
+  margin-right: 0.5rem;
+  padding: 0.2rem;
+  border-radius: 10px;
+  font-weight: bold;
+  font-style: italic;
+  text-align: center;
+  float: left;
+}
+
+.item_box button:hover {
+  background-color: #00f;
+  color: #fff;
+}
+
 @media only screen and (max-width: 1100px) and (min-width: 1001px), only screen and (max-width: 700px) and (min-width: 481px) {
   .item_box {
     height: 400px;
@@ -340,6 +355,7 @@ li#login_sm {
   margin: 1rem auto;
   border: 1px solid #111;
   border-radius: 1rem;
+  background: #fff;
 }
 
 .description_wrapper {
@@ -397,5 +413,49 @@ li#login_sm {
   .detail_title {
     font-size: 1rem;
   }
+}
+
+.createDiagram {
+  width: 90vw;
+  position: fixed;
+  left: 5vw;
+  padding: 1rem;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #111;
+  color: #fff;
+}
+
+.createDiagram input {
+  width: 30vw;
+  display: block;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.7rem;
+  margin-left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  text-align: center;
+}
+
+.createDiagram label {
+  font-weight: bold;
+  font-style: italic;
+}
+
+.createDiagram button {
+  width: 100px;
+  margin: 0.5rem;
+  padding: 0.4rem;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.createDiagram button:hover {
+  background-color: #00f;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
