--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -203,6 +203,21 @@
     text-align:       justify;
     font-size:        $font_size_md;
   }
+
+  button {
+    margin-right:       $font_size_xs;
+    padding:            $font_spacing_xs / 5;
+    border-radius:      $border_contentBox;
+    font-weight:        bold;
+    font-style:         italic;
+    text-align:         center;
+    float:              left;
+  }
+  
+    button:hover {
+      background-color:   $c_main;
+      color:              $c_light;
+    }
 }
 
 
@@ -424,6 +439,7 @@
     margin:           $font_spacing_xs auto;
     border:           1px solid $c_darkBg;
     border-radius:    $font_spacing_xs;
+    background:       $c_lightBg;
   }
 
   .description_wrapper {
@@ -488,5 +504,51 @@
   @media only screen and (max-width: 550px) {
     .detail_title {
       font-size:        $font_size_md;
+    }
+  }
+
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////
+// App create diagram settings
+///////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+  .createDiagram {
+    width:              90vw;
+    position:           fixed;
+    left:               5vw;
+    padding:            $font_size_md;
+    text-align:         center;
+    align-items:        center;
+    background-color:   $c_darkBg;
+    color:              $c_light;
+
+    input {
+      width:            30vw;
+      display:          block;
+      padding:          $font_size_xs;
+      margin-top:       $font_size_xs;
+      margin-bottom:    $font_size_sm;
+      margin-left:      50%;
+      transform:        translateX(-50%);
+      text-align:       center;
+
+    }
+    label {
+      font-weight:      bold;
+      font-style:       italic;
+    }
+
+    button {
+      width:              100px;
+      margin:      $font_size_xs;
+      padding:            $font_spacing_xs / 2.5;
+      border-radius:      $border_contentBox;
+      font-weight:        bold;
+      text-align:         center;
+    }
+  
+    button:hover {
+      background-color:   $c_main;
+      color:              $c_light;
     }
   }
