--- a/src/theme/main.css
+++ b/src/theme/main.css
@@ -110,7 +110,7 @@ li#login_sm {
   display: none;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   li#display_sm,
   li#create_sm,
   li#login_sm {
@@ -290,6 +290,18 @@ li#login_sm {
   }
 }
 
+.button_corrector button {
+  width: 100px;
+  margin: 1rem 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  padding: 0.4rem;
+  border-radius: 10px;
+  font-weight: bold;
+  text-align: center;
+  display: none;
+}
+
 .background_corrector {
   width: 95%;
   height: 100vh;
@@ -380,6 +392,15 @@ li#login_sm {
   font-style: italic;
 }
 
+@media only screen and (max-width: 1000px) {
+  .background_corrector button {
+    display: none;
+  }
+  .button_corrector button {
+    display: block;
+  }
+}
+
 @media only screen and (max-width: 850px) {
   .detail_title {
     font-size: 1.2rem;
@@ -457,5 +478,11 @@ li#login_sm {
 .createDiagram button:hover {
   background-color: #00f;
   color: #fff;
+}
+
+@media only screen and (max-width: 650px) {
+  .createDiagram input {
+    width: 80%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
